feat: integrate Gemini API for direct image generation
- Replace CLI-based approach with direct Gemini API integration
- Use Gemini Imagen 3.0 model for high-quality image generation
- Store generated images in gallery array instead of single image_url field
- Implement proper base64 image decoding and file saving
- Add sanitized filename generation using place ID and name
- Configure via GEMINI_API_KEY and GEMINI_API_URL environment variables
- Maintain quota handling with exponential backoff for API rate limits
- Remove CLI dependency - pure API-based solution for better reliability

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,8 @@ server:
 spring:
   application:
     name: MoheBatch
+  main:
+    allow-bean-definition-overriding: true
   
   datasource:
     url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/mohe_db}
