--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     
     // PostgreSQL driver
     runtimeOnly 'org.postgresql:postgresql'
+
+    // Flyway for database migrations
+    implementation 'org.flywaydb:flyway-core:9.16.3'
     
     // BCrypt for password encoding
     implementation 'org.springframework.security:spring-security-crypto'
@@ -56,6 +59,9 @@ dependencies {
     
     // HTML sanitization for email content
     implementation 'org.jsoup:jsoup:1.17.2'
+    
+    implementation 'com.aallam.openai:openai-client:3.8.0'
+    implementation 'io.ktor:ktor-client-okhttp:2.3.9'
     
     // Test dependencies
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
