--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,10 @@ dependencies {
     
     implementation 'com.aallam.openai:openai-client:3.8.0'
     implementation 'io.ktor:ktor-client-okhttp:2.3.9'
+
+    // HTTP Client Libraries - 가장 유명하고 안정적인 라이브러리들
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'  // 가장 인기 있는 HTTP 클라이언트
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3' // Apache HttpClient 5
     
     // Test dependencies
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
