feat: enhance batch processing and image generation system
- Add comprehensive environment variable support to docker-compose
- Implement advanced batch data collection with Korean Government API integration
- Add intelligent image generation with rating-based AI/default selection
- Create placeholder image system for optimized batch processing
- Enhance place entity with additional metadata fields (keywords, vectors, telephone)
- Add comprehensive category mapping for default images
- Implement scheduled batch processing with configurable intervals
- Add extensive test endpoints for development and debugging
- Improve data filtering to exclude supermarkets and convenience stores
- Support for both OpenAI and Gemini image generation APIs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,16 @@ services:
         condition: service_healthy
     environment:
       SPRING_PROFILES_ACTIVE: docker
+      NAVER_CLIENT_ID: ${NAVER_CLIENT_ID}
+      NAVER_CLIENT_SECRET: ${NAVER_CLIENT_SECRET}
+      GOOGLE_PLACES_API_KEY: ${GOOGLE_PLACES_API_KEY}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      IS_OPENAI_ACTIVE: ${IS_OPENAI_ACTIVE}
+      OLLAMA_HOST: ${OLLAMA_HOST}
+      OLLAMA_MODEL: ${OLLAMA_MODEL}
+      JWT_SECRET: ${JWT_SECRET}
+    env_file:
+      - .env
     networks:
       - mohe-network
     restart: unless-stopped
