Add comprehensive checkpoint system and enhanced batch processing
- Implement checkpoint system with database tables and automatic resume functionality
- Add specialized batch configurations for different execution modes
- Integrate government API data collection with Naver API enrichment
- Enhance place processing with keyword extraction and image mapping
- Add duplicate detection and filtering to prevent data redundancy
- Create Docker batch service configuration for standalone execution
- Implement auto-start batch scheduler with configurable intervals
- Add comprehensive monitoring and health check endpoints

--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,8 @@ compileJava {
     options.encoding = 'UTF-8'
 }
 
-// Disable test tasks completely
-tasks.withType(Test) {
+// Test tasks disabled
+tasks.test {
     enabled = false
 }
 
