--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'com.fasterxml.jackson.core:jackson-core'
-    implementation 'com.fasterxml.jackson.core:jackson-databind'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations'
-    
-    // HikariCP (already included in spring-boot-starter-data-jpa)
-    implementation 'com.zaxxer:HikariCP'
+    // Jackson dependencies are already included in spring-boot-starter-web
+    // HikariCP is already included in spring-boot-starter-data-jpa
     
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
@@ -41,8 +37,7 @@ dependencies {
     // Flyway for database migrations
     implementation 'org.flywaydb:flyway-core:9.16.3'
     
-    // BCrypt for password encoding
-    implementation 'org.springframework.security:spring-security-crypto'
+    // BCrypt is already included in spring-boot-starter-security
     
     // Redis for token storage (optional)
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
