fix: resolve Gradle build issues and enhance API functionality
- Fix testcontainers dependency configuration in build.gradle
- Add missing DTO classes (BookmarkStatusResponse, RecentViewRequest, TermsListResponse)
- Implement new API endpoints:
  - POST /api/activity/recent-places for recording place views
  - POST /api/bookmarks and DELETE /api/bookmarks/{placeId}
  - GET /api/bookmarks/{placeId} for bookmark status check
  - GET /api/places/nearby for location-based place search
- Add pagination support to bookmark list endpoint
- Refactor bookmark service with improved error handling
- Update activity service to support recent view tracking
- Add terms controller for terms and conditions management

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ plugins {
 group = 'com.mohe'
 version = '0.0.1-SNAPSHOT'
 
+ext {
+    testcontainersVersion = '1.19.7'
+}
+
 java {
     sourceCompatibility = JavaVersion.VERSION_21
     targetCompatibility = JavaVersion.VERSION_21
@@ -16,7 +20,18 @@ repositories {
     mavenCentral()
 }
 
+configurations.all {
+    resolutionStrategy {
+        eachDependency { details ->
+            if (details.requested.group == 'org.jetbrains.kotlin' && details.requested.name == 'kotlin-reflect' && details.requested.version == null) {
+                details.useVersion '1.9.20'
+            }
+        }
+    }
+}
+
 dependencies {
+    implementation platform("org.springframework.boot:spring-boot-dependencies:3.2.0")
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -66,9 +81,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'com.h2database:h2'
-    testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:postgresql'
-    testImplementation 'org.testcontainers:redis'
+    testImplementation platform("org.testcontainers:testcontainers-bom:${testcontainersVersion}")
+    testImplementation "org.testcontainers:junit-jupiter"
+    testImplementation "org.testcontainers:postgresql"
 }
 
 tasks.withType(JavaCompile) {
