fix: 엔드포인트 경로 수정 및 docker-compose 설정 개선

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,8 @@ services:
       BATCH_CHUNK_SIZE: ${BATCH_CHUNK_SIZE:-10}
       # Image storage
       IMAGE_STORAGE_PATH: /app/images
-    env_file:
-      - .env
+      # Embedding service
+      EMBEDDING_SERVICE_URL: ${EMBEDDING_SERVICE_URL:-http://localhost:8000}
     volumes:
       - batch_images:/app/images
     networks:
