refactor: 크롤러 포트 2000으로 변경, Caddy 제거
- 크롤러 포트: 4000 → 2000 (기존 MoheCrawler와 충돌 방지)
- Caddy 서비스 제거 (MoheReact의 Caddy가 라우팅 담당)
- mohereact_mohe-network 연결 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,4 @@
 services:
-  # Caddy reverse proxy
-  caddy:
-    image: caddy:2-alpine
-    container_name: mohe-caddy
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
-      - caddy_data:/data
-      - caddy_config:/config
-    networks:
-      - mohe-network
-    restart: unless-stopped
-    depends_on:
-      - batch
-
   # Batch server - connects to external PostgreSQL from MoheSpring
   batch:
     build: .
@@ -31,7 +14,7 @@ services:
       DB_USERNAME: mohe_user
       DB_PASSWORD: mohe_password
       # Crawler service
-      CRAWLER_BASE_URL: http://crawler:4000
+      CRAWLER_BASE_URL: http://crawler:2000
       CRAWLER_TIMEOUT_MINUTES: 30
       # OpenAI
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
@@ -47,6 +30,7 @@ services:
       - batch_images:/app/images
     networks:
       - mohe-network
+      - mohereact_mohe-network
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8081/health"]
@@ -58,30 +42,27 @@ services:
   # Crawler service (MoheCrawler - Flask + Selenium)
   crawler:
     build: ../MoheCrawler
-    container_name: mohe-crawler
+    container_name: mohe-batch-crawler
     ports:
-      - "4000:4000"
+      - "2000:2000"
     environment:
       FLASK_ENV: production
       PYTHONUNBUFFERED: 1
+      PORT: 2000
     networks:
       - mohe-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:2000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
 
 volumes:
   batch_images:
-  caddy_data:
-  caddy_config:
 
 networks:
   mohe-network:
-    # Use external network from MoheSpring if running together
-    # Or create new network if running standalone
-    # external: true
-    # name: mohespring_mohe-network
     driver: bridge
+  mohereact_mohe-network:
+    external: true
