perf: OOM 방지 및 분산 처리 설정
- JVM 힙 메모리 제한 추가 (768MB, G1GC)
- 컨테이너 메모리 제한 (1GB)
- 4워커 분산 처리 지원 (2대 머신)
- 맥북 에어용 docker-compose 추가
- Update 배치 기능 추가
- ImageProcessorClient로 이미지 처리 개선

--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,15 @@ BATCH_TOTAL_WORKERS=3
 BATCH_THREADS_PER_WORKER=5
 BATCH_CHUNK_SIZE=10
 
-# Image Storage Path
-IMAGE_STORAGE_PATH=/app/images
+# Image Storage Path (fallback용 - ImageProcessor 사용 시 불필요)
+# Docker: /app/images
+# Local: /Users/andrewlim/Desktop/Mohe/images
+IMAGE_STORAGE_PATH=/Users/andrewlim/Desktop/Mohe/images
+
+# Image Processor Service (Node.js)
+# Docker: http://mohe-image-processor:3000
+# Local: http://localhost:3000
+IMAGE_PROCESSOR_URL=http://localhost:3000
 
 # Embedding Service
 EMBEDDING_SERVICE_URL=http://localhost:8000
